--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://server-production-8e21.up.railway.app
+VITE_API_URL=server-production-8e21.up.railway.app
 VITE_APP_NAME=Samurai Blog
