--- a/backend/blog_project/requirements.txt
+++ b/backend/blog_project/requirements.txt
@@ -1,8 +1,8 @@
-Django>=4.2.0
-djangorestframework>=3.14.0
-django-cors-headers>=4.0.0
-gunicorn>=21.0.0
-psycopg2-binary>=2.9.7
-python-decouple>=3.8
-whitenoise>=6.5.0
-dj-database-url>=2.1.0
+Django==5.1.1
+djangorestframework==3.15.2
+django-cors-headers==4.6.0
+python-dotenv==1.0.1
+psycopg2-binary==2.9.10
+gunicorn==23.0.0
+whitenoise==6.8.2
+Pillow==11.0.0
